--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 </head>
 
-<body>
+<body class="pb-3">
     <header>
-        <nav class="navbar  navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light pt-3">
             <h1>Chirantan Mukherjee</h1>
             <!-- Menu icon for mobile view -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
@@ -69,7 +69,9 @@
     </header>
     <main class="container pt-1">
         <section id="about">
-            <img src="./assets/dp.jpeg" alt="profile pic" align="right" width="180px" style="border-radius: 150px;">
+            <div>
+                <img src="./assets/dp.jpeg"  alt="profile pic" align="right" width="180px" style="border-radius: 150px;">
+            </div>
             <p class="pt-3">
                 <!-- intro text -->
                 I am a Master Student in the <a href="https://www.maths.unitn.it/en">Department of Mathematics</a> at the <a href="https://www.unitn.it/en">University of Trento</a> working in the track of Advanced Mathematics.
