--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </li>
                     <li>
                         <strong>Products and cochains of equivariant cohomology theories</strong> <a href="./assets/Products.pdf" target="_blank">[handout]</a> <br>
-                        Topology and Geometry of Manifolds Seminar, University of Warsaw
+                        <a href="https://www.mimuw.edu.pl/~jabu/teaching/2020_2021/TiGR.html">Topology and Geometry of Manifolds Seminar</a>, University of Warsaw
                     </li>
                     <li>
                         <strong>Polish Spaces</strong> <a href="./assets/Polish_Spaces.pdf" target="_blank">[pdf]</a> <a href="./assets/Polish Spaces Handout.pdf" target="_blank">[handout] </a><br>
