--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <p class="pt-3">
                 <!-- intro text -->
                 I am a Master Student in the <a href="https://www.maths.unitn.it/en">Department of Mathematics</a> at the <a href="https://www.unitn.it/en">University of Trento</a> working in the track of Advanced Mathematics.
-                I received Thesis Research Abroad grant to complete my dissertation at <a href="https://www.epfl.ch/en/">EPFL</a> under the direction of <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/">Nima Rasekh</a> and <a href="https://webapps.unitn.it/du/it/Persona/PER0004687/Curriculum">Edoardo Ballico</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a>. I will complete my M.Sc. by this winter and graduate in March 2022.<br><br>
+                I received Thesis Research Abroad grant to complete my dissertation at <a href="https://www.epfl.ch/en/">EPFL</a> under the direction of <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/">Kathryn Hess</a>. I will complete my M.Sc. by this winter and graduate in March 2022.<br><br>
                 I was an exchange student at the <a href="https://en.uw.edu.pl/">University of Warsaw</a> in the academic year 2020-21, supported by the Eramus+ grant from the Italian Erasmus+ agency.<br>
 
                 <br>
@@ -206,7 +206,7 @@
                 <h4>Upcoming and Ongoing</h4>
                 <ul>
                     <li>
-                        Attending the <a href="https://sites.google.com/view/higher-category/home">Higher Category Lecture</a>, organized by <a href="https://www.anu.edu.au/">Australian National University</a>
+                        Attending the <a href="https://mukherjeechirantan.github.io/">Higher Category Lecture</a>, organized by <a href="https://www.anu.edu.au/">Australian National University</a>
                     </li>
                 </ul>
             </div>
