--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <h4>Upcoming and Ongoing</h4>
                 <ul>
                     <li>
-                        Attending the <a href="https://mukherjeechirantan.github.io/">Higher Category Lecture</a>, organized by <a href="https://www.anu.edu.au/">Australian National University</a>
+                        Attending the <a href="https://sites.google.com/view/higher-category/home">Higher Category Lecture</a>, organized by <a href="https://www.anu.edu.au/">Australian National University</a>
                     </li>
                 </ul>
             </div>
