--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                         <!-- intro text -->
                         I am a Master Student in the <a href="https://www.maths.unitn.it/en" target="_blank">Department of Mathematics</a> at the <a href="https://www.unitn.it/en" target="_blank">University of Trento</a> working in the track of Advanced Mathematics.
                 I received Thesis Research Abroad grant to complete my dissertation at <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a> under the direction of <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/" target="_blank">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/" target="_blank">Kathryn Hess</a>. I will complete my M.Sc. by this winter and graduate in March 2022.<br><br>
-                I was an exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a> in the academic year 2020-21, supported by the Eramus+ grant from the Italian Erasmus+ agency.<br>
+                I was an exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a> in the academic year 2020-21, supported by the Eramus+ grant from the Italian Erasmus+ agency.<br><br>
+                I am looking for a PhD position for this fall.
                 </div>
 
                 <div class="col-sm-2 text-right">
