--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                         <!-- intro text -->
                         I am a Master Student in the <a href="https://www.maths.unitn.it/en" target="_blank">Department of Mathematics</a> at the <a href="https://www.unitn.it/en" target="_blank">University of Trento</a> working in the track of Advanced Mathematics.
                 I received Thesis Research Abroad grant to complete my dissertation at <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a> under the direction of <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/" target="_blank">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/" target="_blank">Kathryn Hess</a>. I will complete my M.Sc. by this winter and graduate in March 2022.<br><br>
-                I was an exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a> in the academic year 2020-21, supported by the Erasmus+ grant from the Italian Erasmus+ agency.<br><br>
-                I am looking for a PhD position for this fall.
+                I was an exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a> in the academic year 2020-21, supported by the Erasmus+ grant from the Italian Erasmus+ agency.<br>
                 </div>
 
                 <div class="col-sm-2 text-right">
@@ -159,7 +158,7 @@
                 <h4>Dissertations</h4>
                 <table class="table table-borderless">
                     <tr>
-                        <td>Mar. 2022</td>
+                        <td>Mar 2022</td>
                         <td>
                             <strong class="mb-1">M.Sc. Thesis: Complete Segal Spaces as a model of Higher
                                 Categories</strong>
@@ -197,7 +196,7 @@
                 <h4>Past</h4>
                 <table class="table table-borderless">
                     <tr>
-                        <td>Mar. 2021</td>
+                        <td>Mar 2021</td>
                         <td>
                             <strong class="mb-1">The <em>Conf<sub>2</sub></em> space of rational homology of <em>S<sup>3</sup></em> and
                                 propagators</strong> <a href="./assets/Propagators.pdf" target="_blank">[handout]</a> <br>
@@ -206,7 +205,7 @@
                         </td>    
                     </tr>
                     <tr>
-                        <td>Jan. 2021</td>
+                        <td>Jan 2021</td>
                         <td>
                             <strong class="mb-1">Dfferentiable manifolds and forms, de Rham cohomology</strong> <a
                             href="./assets/Differentiable_manifolds_and_forms__de_Rham_cohomology.pdf"
@@ -215,7 +214,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Dec. 2020</td>
+                        <td>Dec 2020</td>
                         <td>
                             <strong class="mb-1">Products and cochains of equivariant cohomology theories</strong> <a
                             href="./assets/Products.pdf" target="_blank">[handout]</a> <br>
@@ -223,7 +222,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Nov. 2020</td>
+                        <td>Nov 2020</td>
                         <td>
                             <strong class="mb-1">Polish Spaces</strong> <a href="./assets/Polish_Spaces.pdf" target="_blank">[pdf]</a> <a
                             href="./assets/Polish Spaces Handout.pdf" target="_blank">[handout] </a> <br>
