--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <img src="./assets/images/dp.jpeg" alt="profile pic" align="right" width="180px"
                             style="border-radius: 150px;">
                         <div class="card-body">
-                            <a href="./assets/cv.pdf" target="_blank">View my CV</a>
+                            <a href="./assets/cv.pdf" target="_blank">View CV</a>
                         </div>
                         <div class="card-footer bg-light p-0 border-0">
                             <ul>
@@ -146,11 +146,11 @@
                 <table class="table table-borderless">
                     <tr>
                         <td>Mar 2022</td>
-                        <td>
+                        
                             <strong class="mb-1">Twisted Arrow Construction for Segal Spaces</strong>
                             <br>
                             <a href="https://arxiv.org/abs/2203.01788" target="_blank">	arXiv:2203.01788 </a>
-                        </td>
+                        
                     </tr>
                 </table>
             </div>
