--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
                     <h2>About</h2>
                     <p class="pt-3">
                         <!-- intro text -->
-                        I am a Master Student in the <a href="https://www.maths.unitn.it/en" target="_blank">Department of Mathematics</a> at the <a href="https://www.unitn.it/en" target="_blank">University of Trento</a> working in the track of Advanced Mathematics.
-                I received Thesis Research Abroad grant to complete my dissertation at <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a> under the direction of <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/" target="_blank">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/" target="_blank">Kathryn Hess</a>. I will complete my M.Sc. by this winter and graduate in March 2022.<br><br>
-                I was an exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a> in the academic year 2020-21, supported by the Erasmus+ grant from the Italian Erasmus+ agency.<br>
+                        I am a Master's Student in the <a href="https://www.maths.unitn.it/en" target="_blank">Department of Mathematics</a> at the <a href="https://www.unitn.it/en" target="_blank">University of Trento</a> in Advanced Mathematics.
+                I received a Thesis Research Abroad grant to complete my dissertation at <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a> under <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/" target="_blank">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/" target="_blank">Kathryn Hess</a>. I will complete my MSc by this winter and graduate in March 2022.<br><br>
+                I was an exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a> in 2020-21, supported by the Erasmus+ grant from the Italian Erasmus+ agency.<br><br>
+                I am looking for a PhD position for fall 2022.
                 </div>
 
                 <div class="col-sm-2 text-right">
@@ -142,59 +143,62 @@
         <section id="papers">
             <h2>Papers</h2>
             <div>
-                <h4>Preprint</h4>
-                <table class="table table-borderless">
-                    <tr>
-                        <td>Mar 2022</td>
-                        
-                            <strong class="mb-1">Twisted Arrow Construction for Segal Spaces</strong>
-                            <br>
-                            <a href="https://arxiv.org/abs/2203.01788" target="_blank">	arXiv:2203.01788 </a>
-                        
-                    </tr>
-                </table>
-            </div>
-            <div>
-                <h4>Dissertations</h4>
-                <table class="table table-borderless">
-                    <tr>
-                        <td>Mar 2022</td>
-                        <td>
-                            <strong class="mb-1">M.Sc. Thesis: Complete Segal Spaces as a model of Higher
-                                Categories</strong>
-                            <p>
-                                This thesis aims to define an important model of <em>(&infin;,1)</em>-categories, namely
-                                the complete Segal spaces, and understand the necessary foundations needed to define it.
-                                We achieve this in several steps. First, we review categorical homotopy theory. Then we
-                                study the theory of model categories and give a detailed characterization of the Kan
-                                model structure on simplicial sets. We then focus on understanding Reedy fibrant
-                                simplicial spaces, the Segal condition and its relation to the composition of maps, and
-                                how it is used to define Segal spaces. This is followed by appending the importance of
-                                the completeness condition via Dwyer-Kan equivalences. Next, we define the twisted arrow
-                                construction for simplicial spaces, and show that the twisted arrow construction of a
-                                complete Segal space <em>X</em>, <em>Tw(X)</em> is a complete Segal space. Further, we
-                                show that the projection map <em>Tw(X) &rarr; X<sup>op</sup> &times; X</em> is a left
-                                fibration of the complete Segal space.
-                            </p>
-                        </td>
-                    </tr>
-                </table>
+            <table class="table table-borderless">
+            <tr>
+                <td><h4>Preprint</h4></td>
+            </tr>
+            <tr>
+                <td>Mar 2022</td>
+                <td>
+                    <strong class="mb-1">Twisted Arrow Construction for Segal Spaces</strong>
+                    <br>
+                    <a href="https://arxiv.org/abs/2203.01788" target="_blank">	arXiv:2203.01788 </a>
+                </td>
+            </tr>
+            <tr>
+                <td><h4>Dissertation</h4></td>
+            </tr>
+            <tr>
+                <td>Mar 2022</td>
+                <td>
+                    <strong class="mb-1">M.Sc. Thesis: Complete Segal Spaces as a model of Higher
+                    Categories</strong>
+                    <p>
+                        This thesis aims to define an important model of <em>(&infin;,1)</em>-categories, namely
+                        the complete Segal spaces, and understand the necessary foundations needed to define it.
+                        We achieve this in several steps. First, we review categorical homotopy theory. Then we
+                        study the theory of model categories and give a detailed characterization of the Kan
+                        model structure on simplicial sets. We then focus on understanding Reedy fibrant
+                        simplicial spaces, the Segal condition and its relation to the composition of maps, and
+                        how it is used to define Segal spaces. This is followed by appending the importance of
+                        the completeness condition via Dwyer-Kan equivalences. Next, we define the twisted arrow
+                        construction for simplicial spaces, and show that the twisted arrow construction of a
+                        complete Segal space <em>X</em>, <em>Tw(X)</em> is a complete Segal space. Further, we
+                        show that the projection map <em>Tw(X) &rarr; X<sup>op</sup> &times; X</em> is a left
+                        fibration of the complete Segal space.
+                    </p>
+                </td>
+            </tr>
+            </table>
             </div>
         </section>
 
         <section id="talks">
             <h2>Talks</h2>
             <div>
-                <h4>Upcoming</h4>
-                <ul>
-                    <!-- <li> -->
-                    <strong class="mb-1">Nothing to display!</strong>
-                    <!-- </li> -->
-                </ul>
-            </div>
-            <div>
-                <h4>Past</h4>
                 <table class="table table-borderless">
+                    <tr>
+                        <td><h4>Upcoming</h4></td>
+                    </tr> 
+                    <tr>
+                        <td></td>
+                        <td>
+                            <strong class="mb-1">Nothing to display!</strong>
+                        </td>
+                    </tr> 
+                    <tr>
+                        <td><h4>Past</h4></td>
+                    </tr>
                     <tr>
                         <td>Mar 2021</td>
                         <td>
@@ -240,21 +244,21 @@
             <h2>Notes</h2>
             <table class="table table-borderless">
                 <tr>
-                    <td>2021</td>
+                    <td>&nbsp;&nbsp;2021&nbsp;&nbsp;&nbsp;&nbsp;</td>
                     <td>
                         <strong class="mb-1">Topological Field Theories and Factorization Homology</strong> <a
                         href="./assets/TFT_and_Factorization_Homology.pdf" target="_blank">[pdf]</a>
                     </td>
                 </tr>
                 <tr>
-                    <td>2021</td>
+                    <td>&nbsp;&nbsp;2021&nbsp;&nbsp;&nbsp;&nbsp;</td>
                     <td>
                         <strong class="mb-1">Finite Element Method</strong> <a href="./assets/Finite_Element_Method.pdf"
                         target="_blank">[pdf]</a>
                     </td>
                 </tr>
                 <tr>
-                    <td>2020</td>
+                    <td>&nbsp;&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;</td>
                     <td>
                         <strong class="mb-1">Persistent Homology</strong> <a href="./assets/Persistent_Homology.pdf"
                         target="_blank">[pdf]</a>
@@ -265,27 +269,30 @@
 
         <section id="activities">
             <h2>Activities</h2>
-            <div>
-                <h4>Upcoming and Ongoing</h4>
-                <ul>
-                    <!-- <li> -->
-                        <strong class="mb-1">Nothing to display!</strong>
-                        <!-- </li> -->
-                </ul>
-            </div>
-            <div>
-                <h4>Past</h4>
-                <table class="table table-borderless">
-                    <tr>
-                        <td>2022</td>
+                <div>
+                    <table class="table table-borderless">
+                        <tr>
+                            <td><h4>Upcoming</h4></td>
+                        </tr> 
+                        <tr>
+                            <td></td>
+                            <td>
+                                <strong class="mb-1">Nothing to display!</strong>
+                            </td>
+                        </tr> 
+                        <tr>
+                            <td><h4>Past</h4></td>
+                        </tr>
+                        <tr>
+                        <td>&nbsp;&nbsp;2022</td>
                         <td>
                             Attended the <a href="https://sites.google.com/view/higher-category/home" target="_blank">Higher Category
-                                Lecture</a>, organized by <a href="https://www.anu.edu.au/" target="_blank">Australian National
-                                University</a>
+                            Lecture</a>, organized by <a href="https://www.anu.edu.au/" target="_blank">Australian National
+                            University</a>
                         </td>
                     </tr>
                     <tr>
-                        <td>2021</td>
+                        <td>&nbsp;&nbsp;2021</td>
                         <td>
                             Participated in the <a
                             href="https://www.math.ku.dk/english/calendar/events/topological-field-theories-factorization-homology/" target="_blank">Masterclass
@@ -294,15 +301,15 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>2021</td>
+                        <td>&nbsp;&nbsp;2021</td>
                         <td>
-                            Attended the <a
+                           Attended the <a
                             href="https://www.epfl.ch/labs/hessbellwald-lab/epfl-topology-seminar-spring-2021/" target="_blank">EPFL
                             Topology Seminar Spring 2021</a>, organized by <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a>
                         </td>
                     </tr>
                     <tr>
-                        <td>2021</td>
+                        <td>&nbsp;&nbsp;2021</td>
                         <td>
                             Attended the <a href="https://www.crm.cat/irp-higher-homotopical-structures/" target="_blank">Intensive Research
                                 Programme: Higher Homotopical Structures</a>, organized by <a
@@ -310,7 +317,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>2020</td>
+                        <td>&nbsp;&nbsp;2020</td>
                         <td>
                             Participated in the <a
                             href="https://www.smi-math.unipr.it/past-courses/perugia/summer-school-smi-2020/60/" target="_blank">Interuniversity
@@ -319,7 +326,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>2017</td>
+                        <td>&nbsp;&nbsp;2017</td>
                         <td>
                             Participated in the Summer Research Program financially supported by <a
                             href="https://www.imsc.res.in/" target="_blank">IMSc</a> under the supervision of <a
@@ -327,7 +334,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>2017</td>
+                        <td>&nbsp;&nbsp;2017</td>
                         <td>
                             Project on Basic Set Topology at <a href="https://www.isical.ac.in/" target="_blank">ISI, Kolkata</a> under the
                         supervision of <a href="https://www.isical.ac.in/~goutam/" target="_blank">Goutam Mukherjee</a>
