--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             </ul>
                             <ul class="pt-0">
                                 <li>
-                                    <a href="https://arxiv.org/search/math?searchtype=author&query=Mukherjee%2C+C" target="_blank">
+                                    <a href="http://arxiv.org/a/mukherjee_c_1" target="_blank">
                                         <i class="icon-arxiv"></i>
                                     </a>
                                 </li>
