--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p class="pt-3">
                         <!-- intro text -->
                         I am a Master's Student in the <a href="https://www.maths.unitn.it/en" target="_blank">Department of Mathematics</a> at the <a href="https://www.unitn.it/en" target="_blank">University of Trento</a> in Advanced Mathematics.
-                I received a Thesis Research Abroad grant to complete my dissertation at <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a> under <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/" target="_blank">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/" target="_blank">Kathryn Hess</a>. I will complete my MSc by this winter and graduate in March 2022.<br><br>
+                I received a Thesis Research Abroad grant to complete my dissertation at <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a> under <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/" target="_blank">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/" target="_blank">Kathryn Hess</a>. I defended my thesis and completed by M.Sc. in March 2022.<br><br>
                 I was an exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a> in 2020-21, supported by the Erasmus+ grant from the Italian Erasmus+ agency.<br><br>
                 I am looking for a PhD position for fall 2022.
                 </div>
@@ -162,7 +162,8 @@
                 <td>Mar 2022</td>
                 <td>
                     <strong class="mb-1">M.Sc. Thesis: Complete Segal Spaces as a model of Higher
-                    Categories</strong>
+                    Categories</strong> <a href="./assets/MSc Thesis.pdf" target="_blank">[pdf]</a> <a
+                    href="./assets/Mukherjee Chirantan 212590.pdf" target="_blank">[talk] </a>
                     <p>
                         This thesis aims to define an important model of <em>(&infin;,1)</em>-categories, namely
                         the complete Segal spaces, and understand the necessary foundations needed to define it.
