--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h2>Research</h2>
             <p>
                 <!-- description -->
-                My research lies in the field of <em>algebraic topology</em>algebraic topology, and focuses on understanding
+                My research lies in the field of <strong class="mb-1">algebraic topology</strong>, and focuses on understanding
                 <strong class="mb-1">higher category theory</strong> and <strong class="mb-1">homotopy theory</strong>.
             </p>
         </section>
