new website, changes needed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- This is the tab header -->
     <title>Chirantan Mukherjee</title>
     <!-- meta tag for description -->
-    <meta name="description" content="Chirantan Mukherjee">
+    <meta name="description" content="category theory">
 
 </head>
 
@@ -74,13 +74,12 @@
         <section id="about">
             <div class="row">
                 <div class="col-sm-10">
-                    <h2>About</h2>
+
                     <p class="pt-3">
                         <!-- intro text -->
-                        I am a Master's Student in the <a href="https://www.maths.unitn.it/en" target="_blank">Department of Mathematics</a> at the <a href="https://www.unitn.it/en" target="_blank">University of Trento</a> in Advanced Mathematics.
-                I received a Thesis Research Abroad grant to complete my dissertation at <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a> under <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/" target="_blank">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/" target="_blank">Kathryn Hess</a>. I defended my thesis and completed my M.Sc. in March 2022.<br><br>
-                I was an exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a> in 2020-21, supported by the Erasmus+ grant from the Italian Erasmus+ agency.<br><br>
-                I am looking for a PhD position for fall 2022.
+                        In September 2022, I will begin my PhD studies at the <a href="https://www.math.uwo.ca/" target="_blank">University of Western Ontario</a>, under the supervison of <a href="https://jdc.math.uwo.ca/" target="_blank">Dan Christensen</a>.<br><br>
+                        I did my MSc in advanced mathematics at the <a href="https://www.maths.unitn.it/en" target="_blank">University of Trento</a> and graduated in March 2022. I received a Thesis Research Abroad grant to write my dissertation at <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a>, where I worked with my advisor <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/" target="_blank">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/" target="_blank">Kathryn Hess</a>.<br><br>
+                        I was also an Erasmus+ exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a>, thanks to the Italian Erasmus+ agency.<br><br>
                 </div>
 
                 <div class="col-sm-2 text-right">
@@ -93,7 +92,7 @@
                         <div class="card-footer bg-light p-0 border-0">
                             <ul>
                                 <li>
-                                    <a href="mailto:chirantan.mukherjee@studenti.unitn.it">
+                                    <a href="mailto:cmukher@uwo.ca">
                                         <i class="fas fa-envelope" style="font-size: 26px;"></i>
                                     </a>
                                 </li>
@@ -190,13 +189,13 @@
                 <table class="table table-borderless">
                     <tr>
                         <td><h4>Upcoming</h4></td>
-                    </tr> 
+                    </tr>
                     <tr>
                         <td></td>
                         <td>
                             <strong class="mb-1">Nothing to display!</strong>
                         </td>
-                    </tr> 
+                    </tr>
                     <tr>
                         <td><h4>Past</h4></td>
                     </tr>
@@ -207,7 +206,7 @@
                                 propagators</strong> <a href="./assets/Propagators.pdf" target="_blank">[handout]</a> <br>
                             <a href="https://www.mimuw.edu.pl/~mcboro/knot.html" target="_blank">Knot Theory Seminar</a>, University of
                                 Warsaw
-                        </td>    
+                        </td>
                     </tr>
                     <tr>
                         <td>Jan 2021</td>
@@ -274,13 +273,13 @@
                     <table class="table table-borderless">
                         <tr>
                             <td><h4>Upcoming</h4></td>
-                        </tr> 
+                        </tr>
                         <tr>
                             <td></td>
                             <td>
                                 <strong class="mb-1">Nothing to display!</strong>
                             </td>
-                        </tr> 
+                        </tr>
                         <tr>
                             <td><h4>Past</h4></td>
                         </tr>
@@ -346,21 +345,19 @@
         </section>
 
         <section id="contact">
-            <h2>Contact</h2>
             <div class="px-3">
-                <div class="email">
-                    <i class="fas fa-envelope"></i>
-                    <a class="pl-1"
-                        href="mailto:chirantan.mukherjee@studenti.unitn.it">chirantan.mukherjee@studenti.unitn.it</a>
-                </div>
-                <div class="d-flex pt-2">
+              <div class="email">
+                  <i class="fas fa-envelope"></i>
+                  <a class="pl-1"
+                      href="mailto:cmukher@uwo.ca">cmukher@uwo.ca</a>
+              </div>
+              <div class="d-flex pt-2">
                     <i class="fas fa-map-marker-alt pt-1"></i>
                     <div class="pl-3">
-                        Department of Mathematics <br>
-                        University of Trento <br>
-                        via Sommarive, 14 - 38123 <br>
-                        Povo (Trento) - I, Italy
-                    </div>
+                        The Department of Mathematics <br>
+                        Middlesex College <br>
+                        London, ON, Canada, N6A 5B7 <br>
+                </div>
                 </div>
                 <!-- <div class="pt-2"> -->
                 <!-- <i class="fas fa-clock"></i> -->
