--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
     <!-- meta tag for description -->
     <meta name="description" content="category theory">
 
+    <style>
+            #leftbox {
+                float:left;
+                background-color: #FFFFFF;
+                width:33%;
+                height:180px;
+            }
+            #middlebox1 {
+                float:left;
+                background-color: #FFFFFF;
+                width:33%;
+                height:180px;
+            }
+            #rightbox {
+                float:left;
+                background-color: #FFFFFF;
+                width:33%;
+                height:180px;
+            }
+        </style>
+
 </head>
 
 <body class="pb-3">
@@ -164,7 +185,7 @@
                     Categories</strong> <a href="./assets/MSc Thesis.pdf" target="_blank">[pdf]</a> <a
                     href="./assets/Mukherjee Chirantan 212590.pdf" target="_blank">[talk] </a>
                     <p>
-                        This thesis aims to define an important model of <em>(&infin;,1)</em>-categories, namely
+                        This thesis aims to define an important model of (&#x221e;, 1)-categories, namely
                         the complete Segal spaces, and understand the necessary foundations needed to define it.
                         We achieve this in several steps. First, we review categorical homotopy theory. Then we
                         study the theory of model categories and give a detailed characterization of the Kan
@@ -173,8 +194,8 @@
                         how it is used to define Segal spaces. This is followed by appending the importance of
                         the completeness condition via Dwyer-Kan equivalences. Next, we define the twisted arrow
                         construction for simplicial spaces, and show that the twisted arrow construction of a
-                        complete Segal space <em>X</em>, <em>Tw(X)</em> is a complete Segal space. Further, we
-                        show that the projection map <em>Tw(X) &rarr; X<sup>op</sup> &times; X</em> is a left
+                        complete Segal space X, Tw(X) is a complete Segal space. Further, we
+                        show that the projection map Tw(X) &rarr; X<sup>op</sup> &times; X is a left
                         fibration of the complete Segal space.
                     </p>
                 </td>
@@ -344,30 +365,48 @@
             </div>
         </section>
 
-        <section id="contact">
-            <div class="px-3">
+    </main>
+    <footer>
+
+      <section id="contact">
+        <h1>Contact</h1>
+          <div id = "boxes">
+            <div id = "leftbox">
               <div class="email">
                   <i class="fas fa-envelope"></i>
                   <a class="pl-1"
                       href="mailto:cmukher@uwo.ca">cmukher@uwo.ca</a>
               </div>
+              <div class="pt-2">
+              <i class='fas fa-building'></i>
+              <span class="pl-1">Give your office number here...</span>
+              </div>
+              <div class="pt-3">
+              <i class="fas fa-clock"></i>
+              <span class="pl-1">Give your office hrs here...</span>
+              </div>
+            </div>
+
+            <div id = "middlebox1">
               <div class="d-flex pt-2">
                     <i class="fas fa-map-marker-alt pt-1"></i>
                     <div class="pl-3">
-                        The Department of Mathematics <br>
-                        Middlesex College <br>
+                        Department of Mathematics <br>
+                        University of Western Ontario <br>
+                        1151 Richmond Street, Middlesex College <br>
                         London, ON, Canada, N6A 5B7 <br>
                 </div>
                 </div>
-                <!-- <div class="pt-2"> -->
-                <!-- <i class="fas fa-clock"></i> -->
-                <!-- <span class="pl-1">Give your office hrs here...</span> -->
-                <!-- </div> -->
             </div>
-        </section>
 
-    </main>
-    <footer></footer>
+            <div id = "rightbox">
+              <img src="./assets/images/Western_Logo_F_S_Science_RGB.svg" alt="univ pic" width="350px"
+                  style>
+            </div>
+
+        </div>
+      </section>
+    </footer>
 </body>
 
 </html>
