--- a/index.html
+++ b/index.html
@@ -377,14 +377,14 @@
                   <a class="pl-1"
                       href="mailto:cmukher@uwo.ca">cmukher@uwo.ca</a>
               </div>
-              <div class="pt-2">
-              <i class='fas fa-building'></i>
-              <span class="pl-1">Give your office number here...</span>
-              </div>
-              <div class="pt-3">
-              <i class="fas fa-clock"></i>
-              <span class="pl-1">Give your office hrs here...</span>
-              </div>
+              <!-- <div class="pt-2"> -->
+              <!-- <i class='fas fa-building'></i> -->
+              <!-- <span class="pl-1">Give your office number here...</span> -->
+              <!-- </div> -->
+              <!-- <div class="pt-3"> -->
+              <!-- <i class="fas fa-clock"></i> -->
+              <!-- <span class="pl-1">Give your office hrs here...</span> -->
+              <!-- </div> -->
             </div>
 
             <div id = "middlebox1">
