--- a/index.html
+++ b/index.html
@@ -26,32 +26,11 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"> -->
 
     <!-- link to our stylesheet -->
-    <link rel="stylesheet" href="./styles.css">
+    <link type="text/css" rel="stylesheet" href="styles.css">
     <!-- This is the tab header -->
     <title>Chirantan Mukherjee</title>
     <!-- meta tag for description -->
     <meta name="description" content="category theory">
-
-    <style>
-            #leftbox {
-                float:left;
-                background-color: #FFFFFF;
-                width:33%;
-                height:180px;
-            }
-            #middlebox1 {
-                float:left;
-                background-color: #FFFFFF;
-                width:33%;
-                height:180px;
-            }
-            #rightbox {
-                float:left;
-                background-color: #FFFFFF;
-                width:33%;
-                height:180px;
-            }
-        </style>
 
 </head>
 
@@ -65,7 +44,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarContent">
-                <ul class="navbar-nav d-flex align-items-center ml-auto">
+                <ul style="margin-right:2%;" class="navbar-nav d-flex align-items-center ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#research">Research</a>
                     </li>
@@ -91,7 +70,7 @@
             </div>
         </nav>
     </header>
-    <main class="container">
+    <main class="contain-hold">
         <section id="about">
             <div class="row">
                 <div class="col-sm-10">
@@ -152,7 +131,7 @@
         </section>
 
         <section id="research">
-            <h2>Research</h2>
+            <h2 class="td-margin-bottom">Research</h2>
             <p>
                 <!-- description -->
                 My research lies in the field of <strong class="mb-1">algebraic topology</strong>, and focuses on understanding
@@ -161,26 +140,26 @@
         </section>
 
         <section id="papers">
-            <h2>Papers</h2>
+            <h2 class="td-margin-bottom">Papers</h2>
             <div>
-            <table class="table table-borderless">
+            <table class="table-portfolio">
             <tr>
-                <td><h4>Preprint</h4></td>
+                <td><h4 class="td-margin-bottom">Preprint</h4></td>
             </tr>
             <tr>
-                <td>Mar 2022</td>
-                <td>
+                <td class="td-vertical">Mar. 2022</td>
+                <td class="td-paper">
                     <strong class="mb-1">Twisted Arrow Construction for Segal Spaces</strong>
                     <br>
                     <a href="https://arxiv.org/abs/2203.01788" target="_blank">	arXiv:2203.01788 </a>
                 </td>
             </tr>
             <tr>
-                <td><h4>Dissertation</h4></td>
+                <td><h4 class="td-margin-bottom">Dissertation</h4></td>
             </tr>
             <tr>
-                <td>Mar 2022</td>
-                <td>
+                <td class="td-vertical">Mar. 2022</td>
+                <td class="td-paper">
                     <strong class="mb-1">M.Sc. Thesis: Complete Segal Spaces as a model of Higher
                     Categories</strong> <a href="./assets/MSc Thesis.pdf" target="_blank">[pdf]</a> <a
                     href="./assets/Mukherjee Chirantan 212590.pdf" target="_blank">[talk] </a>
@@ -205,53 +184,42 @@
         </section>
 
         <section id="talks">
-            <h2>Talks</h2>
+            <h2 class="td-margin-bottom">Talks</h2>
             <div>
-                <table class="table table-borderless">
+                <table class="table-portfolio">
+
                     <tr>
-                        <td><h4>Upcoming</h4></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>
-                            <strong class="mb-1">Nothing to display!</strong>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><h4>Past</h4></td>
-                    </tr>
-                    <tr>
-                        <td>Mar 2021</td>
-                        <td>
-                            <strong class="mb-1">The <em>Conf<sub>2</sub></em> space of rational homology of <em>S<sup>3</sup></em> and
+                        <td class="td-vertical">Mar. 2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                        <td class="td-talk">
+                            <div class="ml-4"><strong class="mb-1">The <em>Conf<sub>2</sub></em> space of rational homology of <em>S<sup>3</sup></em> and
                                 propagators</strong> <a href="./assets/Propagators.pdf" target="_blank">[handout]</a> <br>
                             <a href="https://www.mimuw.edu.pl/~mcboro/knot.html" target="_blank">Knot Theory Seminar</a>, University of
-                                Warsaw
+                                Warsaw</div>
                         </td>
                     </tr>
                     <tr>
-                        <td>Jan 2021</td>
-                        <td>
-                            <strong class="mb-1">Dfferentiable manifolds and forms, de Rham cohomology</strong> <a
+                        <td class="td-vertical"><br>Jan. 2021</td>
+                        <td class="td-talk">
+                            <div class="ml-4"><br><strong class="mb-1">Differentiable manifolds and forms, de Rham cohomology</strong> <a
                             href="./assets/Differentiable_manifolds_and_forms__de_Rham_cohomology.pdf"
                             target="_blank">[pdf]</a> <br>
-                            Curves and Surfaces with Mathematica Project, University of Warsaw
+                            Curves and Surfaces with Mathematica Project, University of Warsaw</div>
                         </td>
                     </tr>
                     <tr>
-                        <td>Dec 2020</td>
-                        <td>
-                            <strong class="mb-1">Products and cochains of equivariant cohomology theories</strong> <a
+                        <td class="td-vertical"><br>Dec. 2020</td>
+                        <td class="td-talk">
+                            <div class="ml-4"><br><strong class="mb-1">Products and cochains of equivariant cohomology theories</strong> <a
                             href="./assets/Products.pdf" target="_blank">[handout]</a> <br>
-                            Topology and Geometry of Manifolds Seminar, University of Warsaw
+                            Topology and Geometry of Manifolds Seminar, University of Warsaw</div>
                         </td>
                     </tr>
                     <tr>
-                        <td>Nov 2020</td>
-                        <td>
-                            <strong class="mb-1">Polish Spaces</strong> <a href="./assets/Polish_Spaces.pdf" target="_blank">[pdf]</a> <a
+                        <td class="td-vertical"><br>Nov. 2020</td>
+                        <td class="td-talk">
+                            <div class="ml-4"><br><strong class="mb-1">Polish Spaces</strong> <a href="./assets/Polish_Spaces.pdf" target="_blank">[pdf]</a> <a
                             href="./assets/Polish Spaces Handout.pdf" target="_blank">[handout] </a> <br>
-                            Topology and Set Theory Seminar, University of Warsaw
+                            Topology and Set Theory Seminar, University of Warsaw</div>
                         </td>
                     </tr>
                 </table>
@@ -262,26 +230,26 @@
         </section> -->
 
         <section id="notes">
-            <h2>Notes</h2>
-            <table class="table table-borderless">
+            <h2 class="td-margin-bottom">Notes</h2>
+            <table class="table-portfolio">
                 <tr>
-                    <td>&nbsp;&nbsp;2021&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                    <td>
+                    <td class="td-vertical">&nbsp;&nbsp;&nbsp;&nbsp;2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                    <td class="td-notes">
                         <strong class="mb-1">Topological Field Theories and Factorization Homology</strong> <a
                         href="./assets/TFT_and_Factorization_Homology.pdf" target="_blank">[pdf]</a>
                     </td>
                 </tr>
                 <tr>
-                    <td>&nbsp;&nbsp;2021&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                    <td>
-                        <strong class="mb-1">Finite Element Method</strong> <a href="./assets/Finite_Element_Method.pdf"
+                    <td class="td-vertical"><br>&nbsp;&nbsp;&nbsp;&nbsp;2021</td>
+                    <td class="td-notes">
+                        <strong class="mb-1"><br>Finite Element Method</strong> <a href="./assets/Finite_Element_Method.pdf"
                         target="_blank">[pdf]</a>
                     </td>
                 </tr>
                 <tr>
-                    <td>&nbsp;&nbsp;2020&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                    <td>
-                        <strong class="mb-1">Persistent Homology</strong> <a href="./assets/Persistent_Homology.pdf"
+                    <td class="td-vertical"><br>&nbsp;&nbsp;&nbsp;&nbsp;2020</td>
+                    <td class="td-notes">
+                        <strong class="mb-1"><br>Persistent Homology</strong> <a href="./assets/Persistent_Homology.pdf"
                         target="_blank">[pdf]</a>
                     </td>
                 </tr>
@@ -289,118 +257,118 @@
         </section>
 
         <section id="activities">
-            <h2>Activities</h2>
+            <h2 class="td-margin-bottom">Activities</h2>
                 <div>
-                    <table class="table table-borderless">
-                        <tr>
-                            <td><h4>Upcoming</h4></td>
+                    <table class="table-portfolio">
+                        <!-- <tr>
+                            <td><h4 class="td-margin-bottom">Upcoming</h4></td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td>
-                                <strong class="mb-1">Nothing to display!</strong>
+                            <td class="td-activity">
+                                <div class="ml-4"><strong class="mb-1">Nothing to display!</strong></div>
                             </td>
                         </tr>
                         <tr>
-                            <td><h4>Past</h4></td>
-                        </tr>
+                            <td><h4 class="td-margin-bottom">Past</h4></td>
+                        </tr> -->
                         <tr>
-                        <td>&nbsp;&nbsp;2022</td>
-                        <td>
-                            Attended the <a href="https://sites.google.com/view/higher-category/home" target="_blank">Higher Category
+                        <td class="td-vertical">&nbsp;&nbsp;&nbsp;&nbsp;2022&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                        <td class="td-activity">
+                            <div class="ml-4">Attended the <a href="https://sites.google.com/view/higher-category/home" target="_blank">Higher Category
                             Lecture</a>, organized by <a href="https://www.anu.edu.au/" target="_blank">Australian National
-                            University</a>
+                            University</a></div>
                         </td>
                     </tr>
                     <tr>
-                        <td>&nbsp;&nbsp;2021</td>
-                        <td>
-                            Participated in the <a
+                        <td class="td-vertical"><br>&nbsp;&nbsp;&nbsp;&nbsp;2021</td>
+                        <td class="td-activity">
+                            <div class="ml-4"><br>Participated in the <a
                             href="https://www.math.ku.dk/english/calendar/events/topological-field-theories-factorization-homology/" target="_blank">Masterclass
                             on Topological Field Theories and Factorization Homology</a>, under the financial support of
-                        the <a href="https://www.ku.dk/english/" target="_blank">University of Copenhagen</a>
+                        the <a href="https://www.ku.dk/english/" target="_blank">University of Copenhagen</a></div>
                         </td>
                     </tr>
                     <tr>
-                        <td>&nbsp;&nbsp;2021</td>
-                        <td>
-                           Attended the <a
+                        <td class="td-vertical"><br>&nbsp;&nbsp;&nbsp;&nbsp;2021</td>
+                        <td class="td-activity">
+                           <div class="ml-4"><br>Attended the <a
                             href="https://www.epfl.ch/labs/hessbellwald-lab/epfl-topology-seminar-spring-2021/" target="_blank">EPFL
-                            Topology Seminar Spring 2021</a>, organized by <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a>
+                            Topology Seminar Spring 2021</a>, organized by <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a></div>
                         </td>
                     </tr>
                     <tr>
-                        <td>&nbsp;&nbsp;2021</td>
-                        <td>
-                            Attended the <a href="https://www.crm.cat/irp-higher-homotopical-structures/" target="_blank">Intensive Research
+                        <td class="td-vertical"><br>&nbsp;&nbsp;&nbsp;&nbsp;2021</td>
+                        <td class="td-activity">
+                            <div class="ml-4"><br>Attended the <a href="https://www.crm.cat/irp-higher-homotopical-structures/" target="_blank">Intensive Research
                                 Programme: Higher Homotopical Structures</a>, organized by <a
-                                href="https://www.crm.cat/" target="_blank">CRM, Spain</a>
+                                href="https://www.crm.cat/" target="_blank">CRM, Spain</a></div>
                         </td>
                     </tr>
                     <tr>
-                        <td>&nbsp;&nbsp;2020</td>
-                        <td>
-                            Participated in the <a
+                        <td class="td-vertical"><br>&nbsp;&nbsp;&nbsp;&nbsp;2020</td>
+                        <td class="td-activity">
+                            <div class="ml-4"><br>Participated in the <a
                             href="https://www.smi-math.unipr.it/past-courses/perugia/summer-school-smi-2020/60/" target="_blank">Interuniversity
                             Mathematical Summer School</a> at the <a href="https://www.unipg.it/en/" target="_blank">University of
-                            Perugia</a>
+                            Perugia</a></div>
                         </td>
                     </tr>
                     <tr>
-                        <td>&nbsp;&nbsp;2017</td>
-                        <td>
-                            Participated in the Summer Research Program financially supported by <a
+                        <td class="td-vertical"><br>&nbsp;&nbsp;&nbsp;&nbsp;2017</td>
+                        <td class="td-activity">
+                            <div class="ml-4"><br>Participated in the Summer Research Program financially supported by <a
                             href="https://www.imsc.res.in/" target="_blank">IMSc</a> under the supervision of <a
-                            href="https://www.imsc.res.in/pralay_chatterjee" target="_blank">Pralay Chatterjee</a>
+                            href="https://www.imsc.res.in/pralay_chatterjee" target="_blank">Pralay Chatterjee</a></div>
                         </td>
                     </tr>
                     <tr>
-                        <td>&nbsp;&nbsp;2017</td>
-                        <td>
-                            Project on Basic Set Topology at <a href="https://www.isical.ac.in/" target="_blank">ISI, Kolkata</a> under the
-                        supervision of <a href="https://www.isical.ac.in/~goutam/" target="_blank">Goutam Mukherjee</a>
+                        <td class="td-vertical"><br>&nbsp;&nbsp;&nbsp;&nbsp;2017</td>
+                        <td class="td-activity">
+                            <div class="ml-4"><br>Project on Basic Set Topology at <a href="https://www.isical.ac.in/" target="_blank">ISI, Kolkata</a> under the
+                        supervision of <a href="https://www.isical.ac.in/~goutam/" target="_blank">Goutam Mukherjee</a></div>
                         </td>
                     </tr>
                 </table>
             </div>
         </section>
 
-    </main>
+</main>
     <footer>
 
-      <section id="contact">
+      <section class="left-space" id="contact">
         <h1>Contact</h1>
-          <div id = "boxes">
-            <div id = "leftbox">
+          <div id="boxes" class="row">
+            <div style="margin-left:3%;" id="footer-margin" class="col-lg-3 col-md-6 mb-6 mx-4">
               <div class="email">
                   <i class="fas fa-envelope"></i>
                   <a class="pl-1"
                       href="mailto:cmukher@uwo.ca">cmukher@uwo.ca</a>
               </div>
-              <!-- <div class="pt-2"> -->
-              <!-- <i class='fas fa-building'></i> -->
-              <!-- <span class="pl-1">Give your office number here...</span> -->
-              <!-- </div> -->
-              <!-- <div class="pt-3"> -->
-              <!-- <i class="fas fa-clock"></i> -->
-              <!-- <span class="pl-1">Give your office hrs here...</span> -->
-              <!-- </div> -->
+              <div class="pt-2">
+              <i class='fas fa-building'></i>
+              <span class="pl-1">Give your office number here...</span>
+              </div>
+              <div class="pt-3">
+              <i class="fas fa-clock"></i>
+              <span class="pl-1">Give your office hrs here...</span>
+              </div>
             </div>
 
-            <div id = "middlebox1">
+            <div style="margin-left:3%;" id="footer-margin" class="col-lg-4 col-md-6 mb-6 mb-md-0">
               <div class="d-flex pt-2">
-                    <i class="fas fa-map-marker-alt pt-1"></i>
-                    <div class="pl-3">
-                        Department of Mathematics <br>
-                        University of Western Ontario <br>
-                        1151 Richmond Street, Middlesex College <br>
-                        London, ON, Canada, N6A 5B7 <br>
-                </div>
-                </div>
+                <i class="fas fa-map-marker-alt pt-1"></i>
+                  <div class="pl-3">
+                      Department of Mathematics <br>
+                      University of Western Ontario <br>
+                      1151 Richmond Street, Middlesex College <br>
+                      London, ON, Canada, N6A 5B7 <br>
+                  </div>
+              </div>
             </div>
 
-            <div id = "rightbox">
-              <img src="./assets/images/Western_Logo_F_S_Science_RGB.svg" alt="univ pic" width="350px"
+            <div style="margin-left:5%" id="footer-margin" class="col-lg-3 col-md-6 mb-6 mb-md-0">
+              <img src="./assets/images/Western_Logo_F_S_Science_RGB.svg" alt="univ pic" width="320px"
                   style>
             </div>
 
