--- a/index.html
+++ b/index.html
@@ -189,7 +189,14 @@
                 <table class="table-portfolio">
 
                     <tr>
-                        <td class="td-vertical">Mar. 2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                        <td class="td-vertical"><br>Jun. 2022&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                        <td class="td-talk">
+                            <div class="ml-4"><br><strong class="mb-1">TBA</strong> <br>
+                            Statistics and Mathematics Unit, Indian Statistical Institute, Kolkata</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="td-vertical">Mar. 2021</td>
                         <td class="td-talk">
                             <div class="ml-4"><strong class="mb-1">The <em>Conf<sub>2</sub></em> space of rational homology of <em>S<sup>3</sup></em> and
                                 propagators</strong> <a href="./assets/Propagators.pdf" target="_blank">[handout]</a> <br>
