--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <td class="td-vertical"><br>Jul. 2022&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                         <td class="td-talk">
                             <div class="ml-4"><br><strong class="mb-1">Complete Segal Spaces as a Model of Higher Categories</strong> <br>
-                                <a href="https://sites.google.com/view/sarahpetersen/groot-summer-seminar" target="_blank">GROOT Summer Seminar 2022, University of Notre Dame</a></div>
+                                <a href="https://sites.google.com/view/sarahpetersen/groot-summer-seminar" target="_blank">GROOT Summer Seminar 2022</a>, University of Notre Dame</div>
                         </td>
                     </tr>
                     <tr>
