--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <h2 class="td-margin-bottom">Notes</h2>
             <table class="table-portfolio">
                 <tr>
-                    <td class="td-vertical">&nbsp;&nbsp;&nbsp;&nbsp;2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                    <td class="td-vertical">&nbsp;&nbsp;&nbsp;&nbsp;2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                     <td class="td-notes">
                         <strong class="mb-1">Topological Field Theories and Factorization Homology</strong> <a
                         href="./assets/TFT_and_Factorization_Homology.pdf" target="_blank">[pdf]</a>
