--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                             <td><h4 class="td-margin-bottom">Past</h4></td>
                         </tr> -->
                         <tr>
-                        <td class="td-vertical">&nbsp;&nbsp;&nbsp;&nbsp;2022&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                        <td class="td-vertical">&nbsp;&nbsp;&nbsp;&nbsp;2022&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
                         <td class="td-activity">
                             <div class="ml-4">Attended the <a href="https://sites.google.com/view/higher-category/home" target="_blank">Higher Category
                             Lecture</a>, organized by <a href="https://www.anu.edu.au/" target="_blank">Australian National
