--- a/index.html
+++ b/index.html
@@ -161,22 +161,9 @@
                 <td class="td-vertical">Mar. 2022</td>
                 <td class="td-paper">
                     <strong class="mb-1">M.Sc. Thesis: Complete Segal Spaces as a model of Higher
-                    Categories</strong> <a href="./assets/MSc Thesis.pdf" target="_blank">[pdf]</a> <a
-                    href="./assets/Mukherjee Chirantan 212590.pdf" target="_blank">[talk] </a>
-                    <p>
-                        This thesis aims to define an important model of (&#x221e;, 1)-categories, namely
-                        the complete Segal spaces, and understand the necessary foundations needed to define it.
-                        We achieve this in several steps. First, we review categorical homotopy theory. Then we
-                        study the theory of model categories and give a detailed characterization of the Kan
-                        model structure on simplicial sets. We then focus on understanding Reedy fibrant
-                        simplicial spaces, the Segal condition and its relation to the composition of maps, and
-                        how it is used to define Segal spaces. This is followed by appending the importance of
-                        the completeness condition via Dwyer-Kan equivalences. Next, we define the twisted arrow
-                        construction for simplicial spaces, and show that the twisted arrow construction of a
-                        complete Segal space X, Tw(X) is a complete Segal space. Further, we
-                        show that the projection map Tw(X) &rarr; X<sup>op</sup> &times; X is a left
-                        fibration of the complete Segal space.
-                    </p>
+                    Categories</strong> <a href="./assets/Mukherjee Chirantan 212590.pdf" target="_blank">[talk] </a>
+                    <br>
+                    <a href="https://www.researchgate.net/publication/360851650_Complete_Segal_Spaces_as_a_model_of_Higher_Categories" target="_blank">	DOI: 10.13140/RG.2.2.13538.20167 </a>
                 </td>
             </tr>
             </table>
