--- a/index.html
+++ b/index.html
@@ -185,10 +185,11 @@
                     <tr>
                         <td class="td-vertical"><br>Jun. 2022</td>
                         <td class="td-talk">
-                            <div class="ml-4"><br><strong class="mb-1">TBA</strong> <br>
-                            Statistics and Mathematics Unit, Indian Statistical Institute, Kolkata</div>
+                            <div class="ml-4"><br><strong class="mb-1">Higher Category Theory</strong> <br>
+                            Statistics and Mathematics Unit, Indian Statistical Institute, Kolkata <br><br> </div>
                         </td>
                     </tr>
+                    <br><br>
                     <tr>
                         <td class="td-vertical">Mar. 2021</td>
                         <td class="td-talk">
