--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
                     <p class="pt-3">
                         <!-- intro text -->
-                        In September 2022, I will begin my PhD studies at the <a href="https://www.math.uwo.ca/" target="_blank">University of Western Ontario</a>, under the supervison of <a href="https://jdc.math.uwo.ca/" target="_blank">Dan Christensen</a>.<br><br>
-                        I did my MSc in advanced mathematics at the <a href="https://www.maths.unitn.it/en" target="_blank">University of Trento</a> and graduated in March 2022. I received a Thesis Research Abroad grant to write my dissertation at <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a>, where I worked with my advisor <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/" target="_blank">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/" target="_blank">Kathryn Hess</a>.<br><br>
-                        I was also an Erasmus+ exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a>, thanks to the Italian Erasmus+ agency.<br><br>
+                        <p>I am a first year Ph.D. student at the <a href="https://www.math.uwo.ca/" target="_blank">University of Western Ontario</a>, under the supervison of <a href="https://jdc.math.uwo.ca/" target="_blank">Dan Christensen</a>. This semester I have been assigned GTA duties in the Math-Physics Accelerator Help Centre, so you might have seen me there!</p>
+                        <p>I did my M.Sc. in advanced mathematics at the <a href="https://www.maths.unitn.it/en" target="_blank">University of Trento</a> and graduated in March 2022. I received a Thesis Research Abroad grant to write my dissertation at <a href="https://www.epfl.ch/en/" target="_blank">EPFL</a>, where I worked with my advisor <a href="https://www.epfl.ch/labs/hessbellwald-lab/members/nimarasekh/" target="_blank">Nima Rasekh</a> in the research group of <a href="https://www.epfl.ch/labs/hessbellwald-lab/hessbellwald/" target="_blank">Kathryn Hess</a>.</p>
+                        <p>I was also an Erasmus+ exchange student at the <a href="https://en.uw.edu.pl/" target="_blank">University of Warsaw</a>, thanks to the Italian Erasmus+ agency.</p>
                 </div>
 
                 <div class="col-sm-2 text-right">
@@ -274,8 +274,14 @@
                         <tr>
                             <td><h4 class="td-margin-bottom">Past</h4></td>
                         </tr> -->
-                        <tr>
+                    <tr>
                         <td class="td-vertical">&nbsp;&nbsp;&nbsp;&nbsp;2022&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                        <td class="td-activity">
+                            <div class="ml-4">Attended the <a href="https://www.uwo.ca/math/faculty/kapulkin/seminars/hottest_summer_school_2022.html" target="_blank">HoTTEST Summer School 2022</a>, organized by <a href="https://uwo.ca/" target="_blank">Western University</a></div><br>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="td-vertical">&nbsp;&nbsp;&nbsp;&nbsp;2022</td>
                         <td class="td-activity">
                             <div class="ml-4">Attended the <a href="https://sites.google.com/view/higher-category/home" target="_blank">Higher Category
                             Lecture</a>, organized by <a href="https://www.anu.edu.au/" target="_blank">Australian National
@@ -339,7 +345,7 @@
     <footer>
 
       <section class="left-space" id="contact">
-        <h1>Contact</h1>
+        <h1>Contact</h2>
           <div id="boxes" class="row">
             <div style="margin-left:3%;" id="footer-margin" class="col-lg-3 col-md-6 mb-6 mx-4">
               <div class="email">
@@ -347,11 +353,11 @@
                   <a class="pl-1"
                       href="mailto:cmukher@uwo.ca">cmukher@uwo.ca</a>
               </div>
-              <!-- <div class="pt-2">
+            <div class="pt-2">
               <i class='fas fa-building'></i>
-              <span class="pl-1">Give your office number here...</span>
+              <span class="pl-1">Middlesex College 102</span>
               </div>
-              <div class="pt-3">
+              <!-- <div class="pt-3">
               <i class="fas fa-clock"></i>
               <span class="pl-1">Give your office hrs here...</span>
               </div> -->
