--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Chirantan Mukherjee's Home Page</title>
         <meta name="Home Page of Chirantan Mukherjee" content="This is the academic homepage of Chirantan Mukherjee, first year math graduate student at Western University. Email: cmukher@uwo.ca" charset="UTF-8">
         <META HTTP-EQUIV="Refresh"
-        CONTENT=";URL=https://publish.uwo.ca/~cmukher/">
+        CONTENT="3;URL=https://publish.uwo.ca/~cmukher/">
         <style>
             p {font-size:110%;}
             ul {font-size:110%;}
