--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
     <body bgcolor="  #76AEED">
         <h1>Chirantan Mukherjee's Old Home Page</h1>
         <p>
-            I have moved to Western University. You should be automatically redirected or you can find my new website
+            I have moved to University of Western Ontario. You should be automatically redirected or you can find my new website at
             <a href="https://publish.uwo.ca/~cmukher/">here</a>
             . 
         </p>
+
+        <footer>
+            <img src="mc.jpg" alt="Footer Image">
+         </footer>
+         
+
     </body>
     </html>
