--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
             ul {font-size:110%;}
             ol {font-size:110%;}
         </style>
+        <style>
+            footer {
+              height: 20px; /* set the height of the footer to 100 pixels */
+              width: 100%; /* set the width of the footer to 100% of the page */
+            }
+          </style>
     </head>
     <body bgcolor="  #76AEED">
         <h1>Chirantan Mukherjee's Old Home Page</h1>
@@ -22,5 +28,5 @@
     <footer>
         <img src="mc.jpg" alt="Footer Image">
      </footer>
-     
+
     </html>
