--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
               height: 20px; /* set the height of the footer to 100 pixels */
               width: 100%; /* set the width of the footer to 100% of the page */
             }
+            img {
+			height: 20px;
+			width: 200px;
+			margin-top: 50px;
+		}
           </style>
     </head>
     <body bgcolor="  #76AEED">
