--- a/index.html
+++ b/index.html
@@ -9,17 +9,6 @@
             ul {font-size:110%;}
             ol {font-size:110%;}
         </style>
-        <style>
-            footer {
-              height: 20px; /* set the height of the footer to 100 pixels */
-              width: 100%; /* set the width of the footer to 100% of the page */
-            }
-            img {
-			height: 20px;
-			width: 200px;
-			margin-top: 50px;
-		}
-          </style>
     </head>
     <body bgcolor="  #76AEED">
         <h1>Chirantan Mukherjee's Old Home Page</h1>
@@ -31,7 +20,8 @@
     </body>
 
     <footer>
-        <img src="mc.jpg" alt="Footer Image">
+        <img src="mc.jpg" alt="Footer Image" height="20px" width="320px"
+        style>
      </footer>
 
     </html>
