--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </body>
 
     <footer>
-        <img src="mc.jpg" alt="Footer Image" height="20px" width="320px"
+        <img src="mc.jpg" alt="Footer Image" height="100px" width="100%"
         style>
      </footer>
 
