--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-US">
     <head>
         <title>Chirantan Mukherjee's Home Page</title>
-        <meta name="Home Page of Chirantan Mukherjee" content="This is the academic homepage of Chirantan Mukherjee, first year math graduate student at Western University. Email: cmukher@uwo.ca" charset="UTF-8">
+        <meta name="Home Page of Chirantan Mukherjee" content="This is the academic homepage of Chirantan Mukherjee at Western University. Email: cmukher@uwo.ca" charset="UTF-8">
         <META HTTP-EQUIV="Refresh"
         CONTENT="0;URL=https://publish.uwo.ca/~cmukher/">
         <style>
@@ -14,7 +14,7 @@
         <h1>Chirantan Mukherjee's Old Home Page</h1>
         <p>
             I have moved to University of Western Ontario. You should be automatically redirected or you can find my new website at
-            <a href="https://publish.uwo.ca/~cmukher/">here</a>
+            <a href="https://csd.uwo.ca/~cmukher/">here</a>
             . 
         </p>
     </body>
